apps/docs/v0.2.10/concepts/cache-and-state.mdx
---
title: "Cache and state"
description: "Where Rigkit stores task outputs, workspace records, fragments, and provider state — and how to invalidate them."
noindex: true
---

Rigkit is useful because setup work is durable. Expensive tasks can run once,
write JSON context and be reused by later plans.

Rigkit tracks upstream run ids, so a change to one task affects the dependent
part of the graph without forcing unrelated work to rerun.

## What is cached

Rigkit caches task outputs, not live resources. A task output is the `ctx`
object returned by the task.

```ts
.task("prepare", async ({ freestyle }) => {
  const { vm, vmId } = await freestyle.client.vms.create({
    logger: console.log,
  });

  try {
    const snapshot = await vm.snapshot();
    return {
      ctx: {
        snapshotId: snapshot.snapshotId,
      },
    };
  } finally {
    await freestyle.client.vms.delete({ vmId });
  }
});
```

The VM object is not cached. The durable `snapshotId` is cached.

## Task context: what to put in it

Task context is durable workflow output. It is persisted and reused by later
plans, applies, workspace creates, and operations.

Good task context:

- resource ids;
- snapshot ids;
- workspace paths;
- ports;
- branch names;
- provider artifact refs shaped like `{ provider, kind, ... }`;
- non-secret metadata needed by later tasks.

Avoid task context for live clients, functions, streams, short-lived process
handles, or accidental secrets.

## Cache keys

A cached task run is reusable only when it still matches the current graph.
Rigkit considers:

- the task path and name;
- the task handler fingerprint;
- the merged `.configure(...)` stack;
- the output schema;
- upstream cached run ids;
- the workflow provider fingerprint;
- the task `cacheTTL`;
- provider artifact validation, when a provider implements it.

Provider fingerprints include provider ids, resolved provider config, and
provider plugin identity. Changing provider config can make cached runs
unusable.

## Local cache

Local cache is stored in the project:

```text
.rigkit/state.sqlite
```

It contains local task runs and workspace records for the selected config.
`.rigkit/` should stay out of source control.

## Global fragments

`.global()` moves a node and its children into a global fragment cache for that
Rigkit installation. When using the CLI, the default fragment state lives at:

```text
~/.rigkit/fragments/<fragment-hash>/state.sqlite
```

Set `RIGKIT_HOME` to move the Rigkit home directory. Hosts that embed the
engine directly can also provide their own global fragment root.

The fragment hash is based on the fragment graph and provider fingerprint.
When two workflows use the same global fragment graph with the same provider
config, they can reuse the same cached setup.

Use global fragments for expensive shared setup, such as:

- base VM images;
- language toolchains;
- authenticated CLI initialization that is intentionally shared;
- warmed package stores.

## Returning to local cache

`.local()` switches a subtree back to local cache after a global fragment.

```ts
const base = app
  .sequence("base")
  .global()
  .task("install-tooling", async () => {
    return { ctx: { snapshotId: "snap_base" } };
  });

const repo = app
  .sequence<{ snapshotId: string }>("repo")
  .local()
  .task("clone-repo", async ({ step }) => ({
    ctx: {
      ...step.ctx,
      repoPath: "/workspace/app",
    },
  }));
```

This is useful when the base should be shared but repo-specific work should
stay in the project cache.

## Expiring task output

Use `cacheTTL` for output that should be considered stale after a duration:

```ts
.task(
  "check-auth",
  { cacheTTL: "30m" },
  async ({ step }) => {
    return { ctx: step.ctx };
  },
);
```

Supported string units are `ms`, `s`, `m`, `h`, and `d`. `cacheTTL: 0` makes
the task run every apply.

## Auth expiration example

The same pattern works well for credentials that expire. For instance, you might
set up a `gcloud` CLI with a long-lived cache, but credentials expire after 24
hours. A refresh task can check and reauthenticate cheaply:

```ts
.task(
  "setup-gcloud",
  { cacheTTL: "7d" },
  async ({ freestyle, terminal }) => {
    const { vm, vmId } = await freestyle.client.vms.create({
      logger: console.log,
    });

    try {
      await vm.exec("curl https://sdk.cloud.google.com | bash");

      await terminal.open("Authenticate with gcloud", {
        ssh: await freestyle.createSSHOptions({ vmId }),
        command: "gcloud auth login",
        keepOpenAfterCommand: true,
        instructions:
          "Complete Google authentication in the browser, then exit the terminal or click Complete task.",
      });

      const snapshot = await vm.snapshot();
      return {
        ctx: {
          snapshotId: snapshot.snapshotId,
        },
      };
    } finally {
      await freestyle.client.vms.delete({ vmId });
    }
  },
);
```

Then check credentials daily and reauthenticate if needed:

```ts
.task(
  "refresh-gcloud-auth",
  { cacheTTL: "24h" },
  async ({ step, freestyle, terminal }) => {
    const { vm, vmId } = await freestyle.client.vms.create({
      snapshotId: step.ctx.snapshotId,
      logger: console.log,
    });

    try {
      // Check if current credentials are valid
      const authStatus = await vm.exec("gcloud auth application-default print-access-token");
      if (!authStatus.ok) {
        // Credentials expired, reauthenticate
        await terminal.open("Refresh gcloud authentication", {
          ssh: await freestyle.createSSHOptions({ vmId }),
          command: "gcloud auth login",
          keepOpenAfterCommand: true,
          instructions:
            "Complete Google authentication again to refresh credentials.",
        });
      }

      return { ctx: step.ctx };
    } finally {
      await freestyle.client.vms.delete({ vmId });
    }
  },
);
```

When credentials expire, `refresh-gcloud-auth` detects it and opens an
interactive terminal to reauthenticate. The setup remains cached; only the
credentials are refreshed.

## Invalidate a previous task from a later task

Tasks can invalidate earlier task output by name. This is useful for health
checks that run after repo setup but discover stale shared state.

```ts
.task("github-auth", async ({ step }) => {
  return {
    ctx: {
      ...step.ctx,
      authenticated: true,
    },
  };
})
.task("check-auth", { cacheTTL: 0 }, async ({ step, freestyle }) => {
  const ok = await checkGitHubAuth(freestyle, step.ctx.snapshotId);
  if (!ok) {
    return step.invalidate("github-auth");
  }
  return { ctx: step.ctx };
});
```

When invalidation happens, Rigkit invalidates the target cached run and the
current task, then restarts evaluation so the workflow can rebuild from the
refreshed task.

## Keeping cached tasks fresh

Caching can optimize expensive setup, but stale cache becomes a problem in
fast-moving codebases. A common pattern is to cache the initial setup with a
long TTL, then run cheaper health checks that invalidate the cache if needed.

For example, you might have a large repo that takes 10+ minutes to clone and
install. You set `cacheTTL: 30d`, but by day 29 the repo is stale and
dependencies are out of date.

Create a setup task:

```ts
.task(
  "clone-and-install",
  { cacheTTL: "30d" },
  async ({ freestyle }) => {
    const { vm, vmId } = await freestyle.client.vms.create({
      logger: console.log,
    });

    try {
      await vm.exec("git clone https://github.com/acme/huge-repo .");
      await vm.exec("npm install");

      const snapshot = await vm.snapshot();
      return {
        ctx: {
          snapshotId: snapshot.snapshotId,
        },
      };
    } finally {
      await freestyle.client.vms.delete({ vmId });
    }
  },
);
```

Then create a refresh task that runs often (or every apply) and checks if the
repo or dependencies are stale:

```ts
.task(
  "refresh-repo",
  { cacheTTL: "1d" },
  async ({ step, freestyle }) => {
    const { vm, vmId } = await freestyle.client.vms.create({
      snapshotId: step.ctx.snapshotId,
      logger: console.log,
    });

    try {
      await vm.exec("git fetch");

      // Check if package-lock.json has changed
      const depsStatus = await vm.exec("git diff --quiet origin/HEAD package-lock.json");
      if (!depsStatus.ok) {
        return step.invalidate("clone-and-install");
      }

      return { ctx: step.ctx };
    } finally {
      await freestyle.client.vms.delete({ vmId });
    }
  },
);
```

When invalidation happens, the workflow rebuilds from `clone-and-install` with
fresh code and dependencies, while still benefiting from long-term caching when
the repo is quiet.

## Manual cache commands

List cache entries:

```sh
rig cache ls
```

Invalidate one task path:

```sh
rig cache invalidate install-tooling
```

Invalidate every task in the selected workflow:

```sh
rig cache invalidate --all
```

Clear local cache:

```sh
rig cache clear --local
```

Clear global fragments reachable from the current workflow:

```sh
rig cache clear --global
```

Clear all known global fragments without loading a config:

```sh
rig cache clear --global --all
```

## Workspace context

Workspaces are stored separately from task runs in the same project state
database. Workspace context is returned from `workspace.create` and stored
until `workspace.remove` runs:

```ts
return {
  vmId,
  repoPath: workflow.ctx.repoPath,
  devPort: workflow.ctx.devPort,
};
```

The stored workspace record includes:

- workspace name;
- workflow name;
- final workflow context used to create the workspace;
- workspace context returned by `workspace.create`;
- timestamps.

Workspace operations read this context through `workspace.ctx`. Removing a
workspace calls the configured `remove` hook and then deletes the workspace
record.

## Provider storage

Custom providers can persist state in two stores, scoped differently:

- **Provider project storage** (`storage`): JSON records tied to the selected
  project. Use it for provider implementation details, such as resource
  bookkeeping.
- **Provider host storage** (`hostStorage`): developer-machine credentials or
  login state that should outlive a project's cache.

```ts
storage.set("branch:br_123", {
  provider: "acme-db",
  kind: "branch",
  branchId: "br_123",
});

const branch = storage.get("branch:br_123");
```

Freestyle browser login, for example, uses provider-owned host storage. That
is why deleting `.rigkit/state.sqlite` does not log the user out of Freestyle.

See [Creating providers](/v0.2.10/providers/creating-providers) for the full storage
API and patterns.

## Storage rules of thumb

- Put workflow outputs in task context.
- Put workspace resource ids in workspace context.
- Put provider implementation records in provider project storage.
- Put developer credentials in provider host storage.
- Put expensive reusable setup in global fragments only when sharing is
  intended.
- Never return a secret in task context unless you are comfortable caching it.
